--- a/style.css
+++ b/style.css
@@ -15,10 +15,12 @@ body {
   background-color: #021027;
   margin:0;
   padding:0;
+  /*
   background-image: url("https://scontent.fdel24-1.fna.fbcdn.net/v/t1.0-9/90263385_3562589627146392_6927914834088427520_o.jpg?_nc_cat=111&_nc_sid=cdbe9c&_nc_ohc=8J6r45-FMXYAX-qca1R&_nc_ht=scontent.fdel24-1.fna&oh=5d76431489992145756b3b39bd28bc9b&oe=5FB4ACDC");
   background-size:cover;
   background-repeat: no-repeat;
   background-color: #040f45;
+  */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -83,6 +85,11 @@ h1 span:nth-child(10)
 .text{
   position: fixed;
   bottom: 47%;
+}
+@media(max-width:800px){
+  h1{
+    font-size: 18.5vw;
+  }
 }
 @keyframes animate
 {
