--- a/style.css
+++ b/style.css
@@ -84,8 +84,13 @@ h1 span:nth-child(10)
 }
 .text{
   position: fixed;
-  bottom: 47%;
+  bottom: 37%;
 
+}
+.festname{
+  width: 100%;
+  font-size: 60px;
+  text-align: center;
 }
 @media(max-width:800px){
   h1{
